--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,6 @@ img {
     padding: 10px 32px;
     border: none;
     border-radius: 4px;
-    margin-top: 30px;
 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: var(--accent-color);
@@ -278,7 +277,7 @@ section {
     text-transform: uppercase;
 
     width: 696px;
-    margin: 0px auto;
+    margin: 0 auto 30px auto;
 
     color: var(--text-color-theme-light);
 }
@@ -865,7 +864,6 @@ section {
     transform: translate(-50%, -50%);
     width: 530px;
     height: 580px;
-    padding: 40px;
 
     background-color: var(--text-color-theme-light);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -902,33 +900,59 @@ section {
     letter-spacing: 0.03em;
     text-align: center;
 
+    margin-bottom: 12px;
+
     color: var(--primary-text-color-theme-dark);
 }
 
-.modal-label {
+.modal-form {
+    width: 450px;
+    padding-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.modal-form-field {
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
 }
 
-.modal-checkbox {
-    margin-top: 20px;
+.modal-label {
+    margin-bottom: 4px;
 }
 
-.contact-input {
-    margin-top: 4px;
-    height: 40px;
+.modal-form-field input {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px 10px 12px 42px;
+    outline: none;
+
+    margin-bottom: 10px;
+}
+
+.modal-form-field input:focus {
+    border-color: var(--accent-color);
+}
+
+.modal-label {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+
+    color: var(--secondary-text-color-theme-dark);
 }
 
 .comment-area {
-    margin-top: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
     resize: none;
+    padding: 12px 16px;
+    margin-bottom: 20px;
 }
 
-.agreement-policy {
-    text-decoration: underline;
+.checkbox-label {
+    margin-bottom: 30px;
 }
 
 .modal-btn {
-    display: flex;
 }
