--- a/css/style.css
+++ b/css/style.css
@@ -927,7 +927,7 @@ section {
     padding: 12px 10px 12px 42px;
     outline: none;
 
-    margin-bottom: 10px;
+    transition: border-color 250ms var(--animation-timing-function);
 }
 
 .modal-form-field input:focus {
@@ -935,11 +935,29 @@ section {
 }
 
 .modal-label {
+    display: inline;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
 
     color: var(--secondary-text-color-theme-dark);
+}
+
+.contact-input-wrapper {
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.contact-input {
+    width: 100%;
+}
+
+.contact-icon {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    color: var(--primary-text-color-theme-dark);
 }
 
 .comment-area {
@@ -948,11 +966,56 @@ section {
     resize: none;
     padding: 12px 16px;
     margin-bottom: 20px;
+    outline: none;
+
+    transition: border-color 250ms var(--animation-timing-function);
 }
 
-.checkbox-label {
-    margin-bottom: 30px;
+.comment-area:focus {
+    border-color: var(--accent-color);
+}
+
+.comment-area::placeholder {
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.agreement-wrapper {
+    display: flex;
+    align-items: center;
+    margin: 0 auto 30px auto;
+}
+
+.agreement-policy {
+    text-decoration: underline;
+    color: var(--accent-color);
 }
 
 .modal-btn {
+    display: block;
+    margin: 0 auto 40px auto;
+}
+
+.checkbox-label::before {
+    content: '';
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--logo-accent-header);
+    border-radius: 2px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+
+    margin-right: 9px;
+}
+
+.checkbox:checked + .checkbox-label::before {
+    border-color: transparent;
+    background-image: url(../images/icon-check.svg);
+    background-color: var(--accent-color);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-origin: border-box;
 }
